Jwt works well but have some bugs